# ax

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  log.txt
.github/workflows/: ci.yml  release.yml
aur/ax-bin/: PKGBUILD
aur/ax-git/: PKGBUILD
src/: api.rs  arch.rs  args.rs  aur.rs  builder.rs  cli.rs  config.rs  core.rs  dependency.rs  git_ops.rs  gpg.rs  graph.rs  interactive.rs  lock.rs  main.rs  news.rs  pacman.rs  parser.rs  resolver.rs  upgrade.rs
