[package]
name = "ax"
version = "1.0.13"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
git2 = "0.20.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
rss = "2.0"
directories = "5.0"
toml = "0.8"
fs2 = "0.4.3"
sysinfo = "0.38.2"
srcinfo = "2.1.0"
petgraph = "0.8.3"
alpm = { git = "https://github.com/archlinux/alpm.rs" }
[build-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5"
